tests/fails/f31.t
if not require("fail") then return end

terra foo()
   var a : struct {}
   return a.b + 4
end
foo()
